change get Posts init and total for MyJss categories

--- a/client-myjss/src/app/modules/company/components/our-story/our-story.component.html
+++ b/client-myjss/src/app/modules/company/components/our-story/our-story.component.html
@@ -25,7 +25,7 @@
     </div>
   </div>
 </section>
-
+<!--
 <section class="container overflow-hidden pb-5">
   <div class="card-info">
     <div class="row">
@@ -59,4 +59,4 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
