correction of : constant name, generic select, highlight text matched in first search practical-sheets

--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-select/generic-select.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-select/generic-select.component.html
@@ -1,14 +1,8 @@
 <div class="form-group full-width" [formGroup]="form!">
-  <label for="{{propertyName}}">{{label}}</label>
-  <select class="form-control" id="{{propertyName}}" [formControlName]="propertyName" [required]="isMandatory ">
+  <label>{{label}}</label>
+  <select class="form-control" [formControlName]="propertyName" [required]="isMandatory ">
     <option *ngFor="let type of types" [value]="type">
       {{ displayLabel(type) }}
     </option>
   </select>
-
-  <!-- Icône "Supprimer" -->
-  <span *ngIf="!isDisabled && model != undefined" class="ml-2 text-danger pointer"
-    (click)="clearField(); $event.stopPropagation()">
-    <i class="bi bi-x-circle"></i>
-  </span>
 </div>
