--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -1632,16 +1632,16 @@
           </tr>
           <tr>
             <td>
-              <select-myjss-category [(model)]="constant.announcementMyJssCategory"
+              <select-myjss-category [(model)]="constant.myJssCategoryAnnouncement"
                 label="Catégorie MyJss - Annonces légales" [form]="constantForm"
-                propertyName="announcementMyJssCategory" [isMandatory]="false"
+                propertyName="myJssCategoryAnnouncement" [isMandatory]="false"
                 [isDisabled]="!editMode"></select-myjss-category>
             </td>
           </tr>
           <tr>
             <td>
-              <select-myjss-category [(model)]="constant.formalityMyJssCategory"
-                label="Catégorie MyJss - Formalités légales" [form]="constantForm" propertyName="formalityMyJssCategory"
+              <select-myjss-category [(model)]="constant.myJssCategoryFormality"
+                label="Catégorie MyJss - Formalités légales" [form]="constantForm" propertyName="myJssCategoryFormality"
                 [isMandatory]="false" [isDisabled]="!editMode"></select-myjss-category>
             </td>
           </tr>
