--- a/client-myjss/src/app/modules/tools/components/post/post.component.html
+++ b/client-myjss/src/app/modules/tools/components/post/post.component.html
@@ -68,7 +68,7 @@
       <div class="rounded-1 text-secondary bg-secondary text-color my-4">
         <div class="p-2">
           <h4 class="text-secondary" style="cursor: pointer;" (click)="togglePlayPause()">
-            <i class="bi mx-2" [class]="isPlaying ? 'ai-pause-filled' : 'ai-play-filled'"></i>
+            <i class="bi mx-2" [class]="isPlaying ? 'ai-pause' : 'ai-play-filled'"></i>
             Ecouter l'article
           </h4>
           <div class="mx-2 mt-3" *ngIf="isPlaying">
@@ -127,7 +127,6 @@
           </div>
         </div>
       </div>
-
 
       <!-- TODO : Comments -->
       <div class="pt-4 pt-xl-5 mt-4" id="comments">
@@ -250,68 +249,67 @@
     </div>
 
 
-    <!-- TODO : Sidebar (offcanvas on sreens < 992px) -->
+    <!-- Sidebar (offcanvas on sreens < 992px) -->
     <aside class="col-lg-3 offset-xl-1">
-      <div class="offcanvas-lg offcanvas-end" id="sidebar">
+      <div class="offcanvas-lg offcanvas-end" data-bs-scroll="true" id="sidebar">
         <div class="offcanvas-header">
           <h4 class="offcanvas-title">Sidebar</h4>
-          <button class="btn-close ms-auto" type="button" data-bs-dismiss="offcanvas" data-bs-target="#sidebar"
-            aria-label="Close"></button>
+          <a class="ms-auto" type="button" data-bs-dismiss="offcanvas" data-bs-target="#sidebar" aria-label="Close">
+            <i class="ai-cross-alt fs-sm"></i>
+          </a>
         </div>
-        <div class="offcanvas-body">
 
-          <!-- Popular posts -->
-          <h4 class="pt-1 pt-lg-0 mt-lg-n2">Most popular:</h4>
+        <div class="offcanvas-body">
+          <h4 *ngIf="hotPosts[0] && hotPosts[1]" class="pt-1 pt-lg-0 mt-lg-n2">Populaires :</h4>
           <div class="mb-lg-5 mb-4">
-            <article class="position-relative pb-2 mb-3 mb-lg-4">
-              <img class="rounded-5" src="assets/img/blog/list/01.jpg" alt="Post image">
+            <article *ngIf="hotPosts[0]" class="position-relative pb-2 mb-3 mb-lg-4">
+              <img class="rounded-5" (click)="openPost(hotPosts[0], $event)"
+                [src]="hotPosts[0].media.urlLarge ? hotPosts[0].media.urlLarge : hotPosts[0].media.urlFull"
+                alt="Post image">
               <h5 class="h6 mt-3 mb-0">
-                <a class="stretched-link" href="blog-single-v1.html">The fashion for eco bags with vintage prints will
-                  still be relevant for more than one year</a>
+                <a class="stretched-link" (click)="openPost(hotPosts[0], $event)">{{hotPosts[0].titleText}}</a>
               </h5>
             </article>
-            <article class="position-relative">
-              <img class="rounded-5" src="assets/img/blog/list/06.jpg" alt="Post image">
+            <article *ngIf="hotPosts[1]" class="position-relative pb-2 mb-3 mb-lg-4">
+              <img class="rounded-5" (click)="openPost(hotPosts[1], $event)"
+                [src]="hotPosts[1].media.urlLarge ? hotPosts[1].media.urlLarge : hotPosts[1].media.urlFull"
+                alt="Post image">
               <h5 class="h6 mt-3 mb-0">
-                <a class="stretched-link" href="blog-single-v2.html">A session with a psychologist as a personal choice
-                  or a fashion trend</a>
+                <a class="stretched-link" (click)="openPost(hotPosts[1], $event)">{{hotPosts[1].titleText}}</a>
               </h5>
             </article>
           </div>
 
           <!-- Recent posts -->
-          <h4 class="pt-3 pt-lg-1 mb-4">Recent posts:</h4>
+          <h4 class="pt-3 pt-lg-1 mb-4">Recents :</h4>
           <ul class="list-unstyled mb-lg-5 mb-4">
-            <li class="border-bottom pb-3 mb-3">
+            <li class="border-bottom pb-3 mb-3" *ngIf="recentPosts[0]">
               <span class="h6 mb-0">
-                <a href="blog-single-v1.html">Instagram trends that will definitely work and bring results in the new
-                  2022</a>
+                <a (click)="openPost(recentPosts[0], $event)">{{recentPosts[0].titleText}}</a>
               </span>
             </li>
-            <li class="border-bottom pb-3 mb-3">
+            <li class="border-bottom pb-3 mb-3" *ngIf="recentPosts[1]">
               <span class="h6 mb-0">
-                <a href="blog-single-v2.html">A session with a psychologist as a personal choice</a>
+                <a (click)="openPost(recentPosts[1], $event)">{{recentPosts[1].titleText}}</a>
               </span>
             </li>
-            <li class="border-bottom pb-3 mb-3">
+            <li class="border-bottom pb-3 mb-3" *ngIf="recentPosts[2]">
               <span class="h6 mb-0">
-                <a href="blog-single-v1.html">Travel destinations to inspire and restore resources</a>
+                <a (click)="openPost(recentPosts[2], $event)">{{recentPosts[2].titleText}}</a>
               </span>
             </li>
-            <li class="border-bottom pb-3">
+            <li class="border-bottom pb-3" *ngIf="recentPosts[3]">
               <span class="h6 mb-0">
-                <a href="blog-single-v2.html">How to look for inspiration for new goals in life?</a>
+                <a (click)="openPost(recentPosts[3], $event)">{{recentPosts[3].titleText}}</a>
               </span>
             </li>
           </ul>
 
-          <!-- Relevant topics -->
-          <h4 class="pt-3 pt-lg-1 mb-4">Relevant topics:</h4>
+          <!-- Relevant tags -->
+          <h4 class="pt-3 pt-lg-1 mb-4" *ngIf="post.postTags && post.postTags[0]">Tags associés :</h4>
           <div class="d-flex flex-wrap mt-n3 ms-n3 mb-lg-5 mb-4 pb-3 pb-lg-0">
-            <a class="btn btn-outline-secondary rounded-pill mt-3 ms-3" href="#">Reading</a>
-            <a class="btn btn-outline-secondary rounded-pill mt-3 ms-3" href="#">Inspiration</a>
-            <a class="btn btn-outline-secondary rounded-pill mt-3 ms-3" href="#">Travel</a>
-            <a class="btn btn-outline-secondary rounded-pill mt-3 ms-3" href="#">Psychology</a>
+            <a *ngFor="let tag of post.postTags" class="btn btn-outline-secondary rounded-pill mt-3 ms-3"
+              (click)="openTagPosts(tag, $event)">{{tag.name}}</a>
           </div>
         </div>
       </div>
