add treasure reporting

--- a/client/src/app/modules/accounting/components/accounting/accounting.component.html
+++ b/client/src/app/modules/accounting/components/accounting/accounting.component.html
@@ -28,5 +28,8 @@
     <mat-tab label="FNP" *ngIf="canDisplayFnp()">
       <fnp></fnp>
     </mat-tab>
+    <mat-tab label="Trésorerie" *ngIf="canDisplayTreasure()">
+      <treasure></treasure>
+    </mat-tab>
   </mat-tab-group>
 </div>
