--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -30,7 +30,7 @@
   secondStepDescription="Profitez d’une saisie libre ou guidée grâce à nos modèles intuitifs. Obtenez le prix instantanément."
   thirdStepTitle="Complétez vos coordonnées et payez"
   thirdStepDescription="Bénéficiez d’une interface sécurisée et fiable pour le traitement de vos informations personnelles."
-  firstJumpTo="5" secondJumpTo="15"></explaination-video>
+  [firstJumpTo]="5" [secondJumpTo]="15"></explaination-video>
 
 <description-my-account></description-my-account>
 
