--- a/client-myjss/src/app/modules/my-services/apostille/apostille.component.html
+++ b/client-myjss/src/app/modules/my-services/apostille/apostille.component.html
@@ -29,8 +29,8 @@
   secondStepTitle="Envoyez les originaux"
   secondStepDescription="Transmettez les documents originaux à cette adresse : JSS - Service Apostilles Légalisations, 10 Boulevard Haussmann, 75009 Paris"
   thirdStepTitle="Récupérez vos documents authentifiés"
-  thirdStepDescription="Recevez vos documents selon les modalités que vous aurez précisées." firstJumpTo="5"
-  secondJumpTo="15"></explaination-video>
+  thirdStepDescription="Recevez vos documents selon les modalités que vous aurez précisées." [firstJumpTo]="5"
+  [secondJumpTo]="15"></explaination-video>
 
 <description-my-account></description-my-account>
 
