--- a/client-myjss/src/app/modules/my-services/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/document/document.component.html
@@ -27,7 +27,7 @@
   firstStepDescription="Nous vous fournissons tous types de documents disponibles auprès des autorités compétentes : Kbis, registres, Actes, CNO, Etats complets, RBE."
   secondStepTitle="Validez votre commande"
   secondStepDescription="Dès validation nos équipes se mobilisent pour obtenir vos pièces dans les meilleurs délais."
-  firstJumpTo="5" secondJumpTo="15"></explaination-video>
+  [firstJumpTo]="5" [secondJumpTo]="15"></explaination-video>
 
 <description-my-account></description-my-account>
 
