--- a/client-myjss/src/app/modules/my-services/explaination-video/explaination-video.component.html
+++ b/client-myjss/src/app/modules/my-services/explaination-video/explaination-video.component.html
@@ -34,7 +34,8 @@
         </div>
       </a>
     </div>
-    <div [ngClass]="thirdStepTitle ? 'col-sm-6 col-lg-6 order-lg-3' : 'col-sm-12 col-lg-12 order-lg-3'">
+    <div
+      [ngClass]="thirdStepTitle &&  thirdJumpTo>0 ? 'col-sm-6 col-lg-6 order-lg-3' : 'col-sm-12 col-lg-12 order-lg-3'">
       <a class=" card border-0 h-100 text-decoration-none" style="cursor: pointer;" (click)="jumpTo(secondJumpTo)">
         <div class="card border-0 h-100 py-lg-2 py-xl-4">
           <div class="card-body">
